--- a/css/about.css
+++ b/css/about.css
@@ -31,8 +31,8 @@ h1 {
     font-size: 4.295vw;
     font-weight: 700;
     text-align: center;
-    padding: 62px 0 62px 0;
-    margin: 62px 0 62px 0;
+    padding: 4.2vw 0 4.2vw 0;
+    margin: 4.2vw 0 4.2vw 0;
 }
 h2 {
     font-size:2.282vw;
@@ -55,7 +55,7 @@ img {
     object-fit: cover;
     box-shadow: 10px 10px 0 1px rgba(0, 0, 0, .07);
     filter: brightness(103%) contrast(96%)saturate(101%) hue-rotate(353deg);
-    width: 95%;
+    width: 96%;
 }
 
 header {
@@ -81,6 +81,9 @@ header {
     align-items: center;
     flex-direction: row;
     
+}
+.Header1 img {
+    box-shadow: none;
 }
 
 .navbarCTA {
@@ -149,6 +152,9 @@ button:hover {
     /*margin: 0 auto;*/
     border-bottom: #fb2056 solid 0.268vw;
 }
+.Header2 {
+    margin-bottom: 6%;
+}
 
 
 footer {
@@ -159,7 +165,7 @@ footer {
     conversion de 14px en vw pour lisibilité sur différents supports*/
     background-color: #404040;
     text-align: center;
-    padding: 30px 0;
+    padding: 2.1vw 0;
 }
 
 address {
@@ -167,7 +173,8 @@ address {
 }
 .Miss{
     display:flex;
-    padding: 50px 38px 70px 38px;
+    flex:  wrap;
+    padding: 3.356vw 2.55vw 4.7vw 2.55vw;
     align-items: center;
     justify-content: center;
     gap: 20px;
@@ -195,7 +202,8 @@ i {
    letter-spacing: 0.5cm;
 }
 
-@media (max-width: 640px) {
+/* Styles pour les écrans de largeur inférieur à 767px */
+@media (max-width: 767px) {
     .navbarCTA nav ul  {
         display: none;
         /* Cache la liste de navigation */
@@ -264,15 +272,25 @@ i {
         display: none;
     }
     .Header1 img {
-        max-width: 50%;
+        max-width: 25%;
+        box-shadow: none;
+    }
+    .Header2 {
+        margin-top: 6%;
+    }
+    .mission {
+        width: auto;
+    }
+    .mission p {
+        padding: 0;
     }
     footer span {
         text-decoration: underline;
     }
 }
 
-/* Styles pour les écrans de largeur supérieure à 640px */
-@media (min-width: 641px) {
+/* Styles pour les écrans de largeur supérieure à 768px */
+@media (min-width: 768px) {
     .icone-menu {
         display: none;
         /* Cache l'icône menu sur les écrans plus larges */
