--- a/css/project.css
+++ b/css/project.css
@@ -154,7 +154,7 @@ button:hover {
 
 }.separator {
     width: 12%;
-    margin-bottom: 4%;
+    margin-bottom: 3%;
     border-bottom: #fb2056 solid 0.268vw;
 }
 .Header2 {
@@ -265,25 +265,24 @@ section {
         height: auto; /* Maintient le ratio de l'image */
     }
     body, footer, header,a {
-        font-size: 9px;
+        font-size: 2.603vw;
+    }
+    p {
+        font-size: 2.603vw;
     }
     button {
         width: 9vh;
     }
     h1 {
-        font-size: 8vw;
+        font-size: 3.911vw;
     }
     h2 {
-        font-size: 4.295vw;
+        font-size: 3.129vw;
        
     }
     h3 {
-        font-size:2.282vw;
+        font-size:2.608vw;
         
-    }
-    h4 {
-        font-size: 1.611vw;
-       
     }
     #fifthavenue {
         text-align: left;
@@ -308,6 +307,9 @@ section {
     }
     footer span {
         text-decoration: underline;
+    }
+    .separator {
+        margin-bottom: 5%;
     }
 }
 /* Styles pour les écrans de largeur supérieure à 768px */
