--- a/css/services.css
+++ b/css/services.css
@@ -57,9 +57,9 @@ img {
     max-height: 100%;
     border-radius: 4px;
     object-fit: cover;
-    box-shadow: 10px 10px 0 1px rgba(0, 0, 0, .07);
+    box-shadow: 0.7vw 0.7vw 0 1px rgba(0, 0, 0, .07);
     filter: brightness(103%) contrast(96%)saturate(101%) hue-rotate(353deg);
-    width: 95%;
+    width: 100%;
 }
 
 header {
@@ -284,24 +284,27 @@ i {
         height: auto; /* Maintient le ratio de l'image */
     }
     body, footer, header,a {
-        font-size: 9px;
+        font-size: 2.603vw;
+    }
+    p {
+        font-size: 2.603vw;
     }
     button {
-        width: 9vh;
+        width: 21vw;
     }
     h1 {
-        font-size: 8vw;
+        font-size: 3.911vw;
     }
     h2 {
-        font-size: 4.295vw;
+        font-size: 3.129vw;
        
     }
     h3 {
-        font-size:2.282vw;
+        font-size:2.608vw;
         
     }
     h4 {
-        font-size: 1.611vw;
+        font-size: 2.086vw;
        
     }
     #fifthavenue {
