--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,7 @@ address {
 }
 .image {
     border-radius: 4px;
-    box-shadow: 10px 10px 0 1px rgba(0, 0, 0, .07);
+    box-shadow: 0.7vw 0.7vw 0 1px rgba(0, 0, 0, .07);
     filter: brightness(103%) contrast(96%)saturate(101%) hue-rotate(353deg);
     padding: 3px;
     width: 90%;
@@ -351,24 +351,27 @@ address {
         height: auto; /* Maintient le ratio de l'image */
     }
     body, footer, header,a {
-        font-size: 9px;
+        font-size: 1.825vw;
+    }
+    p {
+        font-size: 1.956vw;
     }
     button {
         width: 21vw;
     }
     h1 {
-        font-size: 8vw;
+        font-size: 3.911vw;
     }
     h2 {
-        font-size: 4.295vw;
+        font-size: 3.129vw;
        
     }
     h3 {
-        font-size:2.282vw;
+        font-size:2.608vw;
         
     }
     h4 {
-        font-size: 1.611vw;
+        font-size: 2.086vw;
        
     }
     #fifthavenue {
@@ -393,7 +396,7 @@ address {
         
     }
     .bg-fix-2 button {
-        width: 30%;
+        width: 22%;
     }
     .destination {
         padding: 1% 6% 1% 6%;
@@ -413,13 +416,14 @@ address {
     }
     .citation q {
         width: 100%;
-        font-size: 14px;
+        font-size: 2.603vw;
     }
     footer span {
         text-decoration: underline;
     }
     footer p {
         margin: 0;
+        font-size: 1.825vw;
     }
     header {
         height: auto;
